--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -20,10 +20,10 @@
         </tr>
         <tr>
           <td>
-            <label>E-mail Address</label>
+            <label>E-mail</label>
           </td>
           <td>
-            <input type="text" name="email" placeholder="E-mail Address">
+            <input type="text" name="email" placeholder="E-mail">
           </td>
         </tr>
         <tr>
