header.ejs & footer.ejsを作成し、挿入

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login Page</title>
-</head>
-<body>
+<%- include('components/header') %>
   <h1><%= title %></h1>
   <form class="signup-form" action="/login">
     <table>
@@ -46,5 +39,4 @@
     </table>
     <button>Resister</button>
   </form>
-</body>
-</html>
+<%- include('components/footer') %>
