--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Signup Page</title>
-</head>
-<body>
+<%- include('components/header') %>
   <h1><%= title %></h1>
   <form class="login-form" action="/">
     <table>
@@ -30,5 +23,4 @@
     </table>
     <button>Login</button>
   </form>
-</body>
-</html>
+<%- include('components/footer') %>
