--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,7 @@
 <%- include('components/header') %>
   <h1><%= title %></h1>
   <p>You are logged in!</p>
-  <button>Logout</button>
+  <a href="/login">
+    <button>Logout</button>
+  </a>
 <%- include('components/footer') %>
