POSTメソッドへ変更

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,6 +1,6 @@
 <%- include('components/header') %>
   <h1><%= title %></h1>
-  <form class="signup-form" action="/home">
+  <form class="signup-form" action="/home" method="POST">
     <table>
       <tbody>
         <tr>
