--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -24,7 +24,7 @@
             <label>Password</label>
           </td>
           <td>
-            <input type="text" name="passwrod" placeholder="Password">
+            <input type="text" name="password" placeholder="Password">
           </td>
         </tr>
         <tr>
@@ -32,7 +32,7 @@
             <label>Confirm Password</label>
           </td>
           <td>
-            <input type="text" name="confirm-passwrod" placeholder="Confirm Password">
+            <input type="text" name="confirmpassword" placeholder="Confirm Password">
           </td>
         </tr>
       </tbody>
