/homeでユーザ名を表示

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,6 @@
 <%- include('components/header') %>
   <h1><%= title %></h1>
+  <h2>ユーザ名：<%= name %></h2>
   <p>You are logged in!</p>
   <a href="/login">
     <button>Logout</button>
