確認用のbuttonを追加

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -23,4 +23,8 @@
     </table>
     <button>Login</button>
   </form>
+  <!-- 確認用 -->
+  <a href="/">
+    <button>Signup</button>
+  </a>
 <%- include('components/footer') %>
