確認用の記述

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -37,6 +37,10 @@
         </tr>
       </tbody>
     </table>
-    <button>Resister</button>
+    <% if (true) { %>
+      <% console.log('yeah!') %>
+      <p>Errorだよ！</p>
+      <button disabled>Resister</button>
+    <% } %>
   </form>
 <%- include('components/footer') %>
