条件分岐を書き換え

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -39,4 +39,7 @@
     </table>
     <button>Resister</button>
   </form>
+  <h3><%= errorMessagePasswordLength %></h3>
+  <h3><%= errorMessageConfirmedPassword %></h3>
+  <h3><%= errorMessageRequired %></h3>
 <%- include('components/footer') %>
