フォームのリクエスト先を変更

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,6 @@
 <%- include('components/header') %>
   <h1><%= title %></h1>
-  <form class="login-form" action="/home" method="POST">
+  <form class="login-form" action="/" method="POST">
     <table>
       <tbody>
         <tr>
